clientelling/objects/Boutique__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Customer__r.Customer_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Stores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Store_Name__c</fullName>
        <formula>Store__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Retail Custom Store Lookup Field</description>
        <label>Store</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.NTO_Store__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Stores</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Boutique</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>UID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Boutiques</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>